BugFix: Dockerfile added to the list of files required to change for rebuilding the docker image

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/docker-image.yml'
+      - 'Dockerfile'
       - 'cmd/**/*.go'
       - 'internal/**/*.go'
       - 'go.mod'
