BugFix: CI and DOcker image pipelines only run against master for GO files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,13 @@ on:
   push:
     branches:
       - master
+    paths:
+      - '**/*.go'
   pull_request:
+    branches:
+      - master
+    paths:
+      - '**/*.go'
 
 concurrency:
   group: ci-${{ github.ref }}
