--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,11 +3,10 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'Dockerfile'
-      - 'cmd/**/*.go'
-      - 'internal/**/*.go'
+      - '**/*.go'
       - 'go.mod'
       - 'go.sum'
   workflow_dispatch:
