--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,16 @@ services:
       retries: 20
     restart: unless-stopped
 
-  api:
+  loopaware:
     build: .
-    container_name: feedback-api
+    container_name: loopaware
     depends_on:
       postgres:
         condition: service_healthy
     environment:
       APP_ADDR: ":8080"
       ADMIN_BEARER_TOKEN: "replace-with-long-random"
-      DB_DSN: "host=postgres user=feedback_user password=feedback_password dbname=feedback port=5432 sslmode=disable TimeZone=UTC"
+      DB_DSN: "host=postgres user=feedback_user password=feedback_password dbname=feedback port=5432 sslmode=disable"
     ports:
       - "8080:8080"
     restart: unless-stopped
