--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,20 @@ services:
     ports:
       - "8080:8080"
     restart: unless-stopped
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./config.yaml
+          target: /app/config.yaml
+        - action: rebuild
+          path: ./cmd/main.go
+        - action: rebuild
+          path: ./internal/httpapi/assets/widget.js
+        - action: rebuild
+          path: ./internal/httpapi/templates/dashboard.tmpl
+        - action: rebuild
+          path: ./go.sum
+    
 
 volumes:
   loopaware-data:
