Checkout uses a single point for go version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,15 @@ on:
       - master
     paths:
       - '**/*.go'
+      - 'go.mod'
+      - 'go.sum'
   pull_request:
     branches:
       - master
     paths:
       - '**/*.go'
+      - 'go.mod'
+      - 'go.sum'
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -28,7 +32,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23.x'
+          go-version-file: go.mod
+          check-latest: true
           cache: true
 
       - name: Verify modules
