--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ GOOGLE_CLIENT_ID=change-me.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=replace-with-google-client-secret
 SESSION_SECRET=replace-with-32-byte-random-secret
 PUBLIC_BASE_URL=http://localhost:8080
+GRPC_AUTH_TOKEN=replace-with-pinguin-bearer-token
+PINGUIN_AUTH_TOKEN=replace-with-pinguin-bearer-token
