--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,10 @@ services:
     build: .
     container_name: loopaware
     env_file:
-      - .env
+      - .env.loopaware
     depends_on:
       pinguin:
         condition: service_started
-    environment:
-      - PINGUIN_ADDR=pinguin:50051
     volumes:
       - loopaware-data:/app/data
       - ./config.yaml:/app/config.yaml:ro
