--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,16 +36,5 @@ jobs:
           check-latest: true
           cache: true
 
-      - name: Verify modules
-        run: |
-          go mod tidy
-          git diff --exit-code || (echo "::error::go.mod/go.sum drift after tidy" && exit 1)
-
-      - name: Build
-        run: go build ./...
-
-      - name: Vet
-        run: go vet ./...
-
-      - name: Test (verbose, race)
-        run: go test ./... -v -race -count=1
+      - name: Make CI
+        run: make ci
