--- a/configs/config.tauth.yml
+++ b/configs/config.tauth.yml
@@ -1,9 +1,11 @@
 server:
   listen_addr: "${TAUTH_LISTEN_ADDR}"
-  database_url: "${APP_DATABASE_URL}"
-  enable_cors: "${APP_ENABLE_CORS}"
+  database_url: "${TAUTH_DATABASE_URL}"
+  enable_cors: "${TAUTH_ENABLE_CORS}"
   cors_allowed_origins:
-    - "${APP_CORS_ALLOWED_ORIGINS}"
+    - ${TAUTH_CORS_ORIGIN_1}
+    - ${TAUTH_CORS_ORIGIN_2}
+    - ${TAUTH_CORS_ORIGIN_3}
   enable_tenant_header_override: false
 
 tenants:
@@ -12,12 +14,12 @@ tenants:
     allowed_hosts:
       - "localhost"
       - "127.0.0.1"
-    google_web_client_id: "${APP_GOOGLE_WEB_CLIENT_ID}"
-    jwt_signing_key: "${APP_JWT_SIGNING_KEY}"
-    cookie_domain: "${APP_COOKIE_DOMAIN}"
+    google_web_client_id: "${TAUTH_LOOPAWARE_GOOGLE_WEB_CLIENT_ID}"
+    jwt_signing_key: "${TAUTH_LOOPAWARE_JWT_SIGNING_KEY}"
+    cookie_domain: "${TAUTH_COOKIE_DOMAIN}"
     session_cookie_name: "app_session"
     refresh_cookie_name: "app_refresh"
     session_ttl: "30m"
     refresh_ttl: "720h"
     nonce_ttl: "5m"
-    allow_insecure_http: "${APP_DEV_INSECURE_HTTP}"
+    allow_insecure_http: "${TAUTH_ALLOW_INSECURE_HTTP}"
