Fix LS-314 pinguin tenant_id metadata

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,4 @@ SESSION_SECRET=replace-with-32-byte-random-secret
 PUBLIC_BASE_URL=http://localhost:8080
 GRPC_AUTH_TOKEN=replace-with-pinguin-bearer-token
 PINGUIN_AUTH_TOKEN=replace-with-pinguin-bearer-token
+PINGUIN_TENANT_ID=tenant-local
