--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,10 @@ APP_ADDR=:8080
 DB_DRIVER=sqlite
 DB_DSN=file:/app/data/loopaware.sqlite?_foreign_keys=on
 GOOGLE_CLIENT_ID=change-me.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=replace-with-google-client-secret
 SESSION_SECRET=replace-with-32-byte-random-secret
+TAUTH_BASE_URL=https://tauth.example.com
+TAUTH_TENANT_ID=loopaware
+TAUTH_JWT_SIGNING_KEY=replace-with-tauth-jwt-signing-key
 PUBLIC_BASE_URL=http://localhost:8080
 GRPC_AUTH_TOKEN=replace-with-pinguin-bearer-token
 PINGUIN_AUTH_TOKEN=replace-with-pinguin-bearer-token
