--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,7 @@ SESSION_SECRET=replace-with-32-byte-random-secret
 TAUTH_BASE_URL=https://tauth.example.com
 TAUTH_TENANT_ID=loopaware
 TAUTH_JWT_SIGNING_KEY=replace-with-tauth-jwt-signing-key
+TAUTH_SESSION_COOKIE_NAME=app_session_loopaware
 PUBLIC_BASE_URL=http://localhost:8080
 GRPC_AUTH_TOKEN=replace-with-pinguin-bearer-token
 PINGUIN_AUTH_TOKEN=replace-with-pinguin-bearer-token
