--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,10 +54,29 @@ jobs:
           TAUTH_CORS_ORIGIN_1=http://localhost:8000
           TAUTH_CORS_ORIGIN_2=http://127.0.0.1:8000
           TAUTH_CORS_ORIGIN_3=http://localhost:4173
+          TAUTH_CORS_EXCEPTION_1=https://accounts.google.com
           TAUTH_ALLOW_INSECURE_HTTP=true
           TAUTH_COOKIE_DOMAIN=localhost
+          TAUTH_SESSION_TTL=30m
+          TAUTH_REFRESH_TTL=720h
+          TAUTH_NONCE_TTL=5m
+          TAUTH_ENABLE_TENANT_HEADER_OVERRIDE=true
           TAUTH_LOOPAWARE_GOOGLE_WEB_CLIENT_ID=ci-google-client-id
           TAUTH_LOOPAWARE_JWT_SIGNING_KEY=ci-signing-key
+          TAUTH_TENANT_ID_PINGUIN=pinguin
+          TAUTH_TENANT_DISPLAY_NAME_PINGUIN="Pinguin CI"
+          TAUTH_TENANT_ORIGIN_PINGUIN=http://localhost:8081
+          TAUTH_TENANT_GOOGLE_WEB_CLIENT_ID_PINGUIN=ci-google-client-id
+          TAUTH_TENANT_JWT_SIGNING_KEY_PINGUIN=ci-signing-key
+          TAUTH_TENANT_SESSION_COOKIE_NAME_PINGUIN=app_session_pinguin
+          TAUTH_TENANT_REFRESH_COOKIE_NAME_PINGUIN=app_refresh_pinguin
+          TAUTH_TENANT_ID_LOOPAWARE=loopaware
+          TAUTH_TENANT_DISPLAY_NAME_LOOPAWARE="LoopAware CI"
+          TAUTH_TENANT_ORIGIN_LOOPAWARE=http://localhost:8080
+          TAUTH_TENANT_GOOGLE_WEB_CLIENT_ID_LOOPAWARE=ci-google-client-id
+          TAUTH_TENANT_JWT_SIGNING_KEY_LOOPAWARE=ci-signing-key
+          TAUTH_TENANT_SESSION_COOKIE_NAME_LOOPAWARE=app_session_loopaware
+          TAUTH_TENANT_REFRESH_COOKIE_NAME_LOOPAWARE=app_refresh_loopaware
           EOF
 
           cat > configs/.env.pinguin <<'EOF'
@@ -89,6 +108,10 @@ jobs:
           LOOPAWARE_TWILIO_AUTH_TOKEN=ci
           LOOPAWARE_TWILIO_FROM_NUMBER=+10000000000
           TAUTH_SIGNING_KEY=ci-signing-key
+          TAUTH_COOKIE_NAME=app_session_pinguin
+          TAUTH_GOOGLE_CLIENT_ID=ci-google-client-id
+          TAUTH_BASE_URL=http://localhost:8082
+          TAUTH_TENANT_ID=pinguin
           EOF
 
           cat > configs/.env.loopaware <<'EOF'
@@ -98,10 +121,15 @@ jobs:
           GOOGLE_CLIENT_ID=ci-google-client-id
           GOOGLE_CLIENT_SECRET=ci-google-client-secret
           SESSION_SECRET=ci-session-secret
+          TAUTH_BASE_URL=http://localhost:8082
+          TAUTH_TENANT_ID=loopaware
+          TAUTH_JWT_SIGNING_KEY=ci-signing-key
+          TAUTH_SESSION_COOKIE_NAME=app_session_loopaware
           PUBLIC_BASE_URL=http://localhost:8080
           ADMINS=admin@example.com
           PINGUIN_ADDR=pinguin:50051
           PINGUIN_AUTH_TOKEN=ci-grpc-auth-token
+          PINGUIN_TENANT_ID=loopaware-local
           EOF
 
       - name: Make CI
