--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - master
     paths:
       - '**/*.go'
-      - 'docker-compose.yml'
+      - 'docker-compose*.yml'
       - 'configs/**'
       - 'internal/httpapi/assets/**'
       - 'internal/httpapi/templates/**'
@@ -17,7 +17,7 @@ on:
       - master
     paths:
       - '**/*.go'
-      - 'docker-compose.yml'
+      - 'docker-compose*.yml'
       - 'configs/**'
       - 'internal/httpapi/assets/**'
       - 'internal/httpapi/templates/**'
