--- a/docker-compose.computercat.yml
+++ b/docker-compose.computercat.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     pull_policy: always
     env_file:
-      - ./configs/.env.tauth
+      - ./configs/.env.tauth.computercat
     expose:
       - "8082"
     volumes:
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     pull_policy: always
     env_file:
-      - ./configs/.env.pinguin
+      - ./configs/.env.pinguin.computercat
     expose:
       - "8081"
     volumes:
@@ -33,7 +33,7 @@ services:
     restart: unless-stopped
     pull_policy: always
     env_file:
-      - ./configs/.env.loopaware
+      - ./configs/.env.loopaware.computercat
     depends_on:
       la-pinguin:
         condition: service_started
@@ -55,7 +55,7 @@ services:
     ports:
       - "4443:4443"
     env_file:
-      - ./configs/.env.ghttp
+      - ./configs/.env.ghttp.computercat
     volumes:
       - /media/share/Drive/exchange/certs/computercat:/certs:ro
     restart: unless-stopped
