--- a/docker-compose.computercat.yml
+++ b/docker-compose.computercat.yml
@@ -28,10 +28,12 @@ services:
       - ./configs/config.pinguin.yml:/config/config.yml:ro
 
   loopaware:
+    build:
+      context: .
     image: ghcr.io/tyemirov/loopaware:latest
     container_name: loopaware
     restart: unless-stopped
-    pull_policy: always
+    pull_policy: build
     env_file:
       - ./configs/.env.loopaware.computercat
     depends_on:
