--- a/configs/.env.ghttp.example
+++ b/configs/.env.ghttp.example
@@ -3,4 +3,4 @@ GHTTP_SERVE_PORT=4443
 GHTTP_SERVE_LOGGING_TYPE=JSON
 GHTTP_SERVE_TLS_CERTIFICATE=/certs/computercat-cert.pem
 GHTTP_SERVE_TLS_PRIVATE_KEY=/certs/computercat-key.pem
-GHTTP_SERVE_PROXIES=/tauth.js=http://la-tauth:8082,/me=http://la-tauth:8082,/auth/=http://la-tauth:8082,/=http://loopaware:8080
+GHTTP_SERVE_PROXIES=/tauth.js=http://la-tauth:8082,/me=http://la-tauth:8082,/auth/=http://la-tauth:8082,/api/=http://loopaware-api:8080,/widget.js=http://loopaware-api:8080,/subscribe.js=http://loopaware-api:8080,/pixel.js=http://loopaware-api:8080,/app/sites/=http://loopaware-api:8080,/subscriptions/=http://loopaware-api:8080,/subscribe-demo=http://loopaware-api:8080,/=http://loopaware-web:8080
