--- a/configs/.env.tauth.computercat.example
+++ b/configs/.env.tauth.computercat.example
@@ -6,13 +6,14 @@ TAUTH_LISTEN_ADDR=:8082
 TAUTH_DATABASE_URL=sqlite:///data/tauth.db
 TAUTH_ENABLE_CORS=true
 TAUTH_CORS_ORIGIN_1=https://computercat.tyemirov.net:4443
-TAUTH_CORS_ORIGIN_2=https://computercat.tyemirov.net:4443
+TAUTH_CORS_ORIGIN_2=https://localhost:4443
 TAUTH_CORS_EXCEPTION_1=https://accounts.google.com
-TAUTH_ENABLE_TENANT_HEADER_OVERRIDE=false
+TAUTH_ENABLE_TENANT_HEADER_OVERRIDE=true
 
 # gHTTP reverse proxy does not currently set X-Forwarded-Proto=https for upstream services.
 TAUTH_ALLOW_INSECURE_HTTP=true
-TAUTH_COOKIE_DOMAIN=computercat.tyemirov.net
+# Leave blank for host-only cookies when developing locally.
+TAUTH_COOKIE_DOMAIN=
 TAUTH_SESSION_TTL=30m
 TAUTH_REFRESH_TTL=720h
 TAUTH_NONCE_TTL=5m
@@ -21,6 +22,7 @@ TAUTH_NONCE_TTL=5m
 TAUTH_TENANT_ID_PINGUIN=pinguin
 TAUTH_TENANT_DISPLAY_NAME_PINGUIN=Pinguin
 TAUTH_TENANT_ORIGIN_PINGUIN=https://computercat.tyemirov.net:4443
+TAUTH_TENANT_ORIGIN_PINGUIN_ALT=https://localhost:4443
 TAUTH_TENANT_GOOGLE_WEB_CLIENT_ID_PINGUIN=replace-with-google-client-id.apps.googleusercontent.com
 TAUTH_TENANT_JWT_SIGNING_KEY_PINGUIN=replace-with-tauth-signing-key
 TAUTH_TENANT_SESSION_COOKIE_NAME_PINGUIN=app_session_pinguin
@@ -30,6 +32,7 @@ TAUTH_TENANT_REFRESH_COOKIE_NAME_PINGUIN=app_refresh_pinguin
 TAUTH_TENANT_ID_LOOPAWARE=loopaware
 TAUTH_TENANT_DISPLAY_NAME_LOOPAWARE=LoopAware
 TAUTH_TENANT_ORIGIN_LOOPAWARE=https://computercat.tyemirov.net:4443
+TAUTH_TENANT_ORIGIN_LOOPAWARE_ALT=https://localhost:4443
 TAUTH_TENANT_GOOGLE_WEB_CLIENT_ID_LOOPAWARE=replace-with-google-client-id.apps.googleusercontent.com
 TAUTH_TENANT_JWT_SIGNING_KEY_LOOPAWARE=replace-with-tauth-signing-key
 TAUTH_TENANT_SESSION_COOKIE_NAME_LOOPAWARE=app_session_loopaware
