--- a/configs/.env.tauth.example
+++ b/configs/.env.tauth.example
@@ -21,6 +21,7 @@ TAUTH_NONCE_TTL=5m
 TAUTH_TENANT_ID_PINGUIN=pinguin
 TAUTH_TENANT_DISPLAY_NAME_PINGUIN=Pinguin
 TAUTH_TENANT_ORIGIN_PINGUIN=http://localhost:8081
+TAUTH_TENANT_ORIGIN_PINGUIN_ALT=http://127.0.0.1:8081
 TAUTH_TENANT_GOOGLE_WEB_CLIENT_ID_PINGUIN=replace-with-google-client-id.apps.googleusercontent.com
 TAUTH_TENANT_JWT_SIGNING_KEY_PINGUIN=replace-with-tauth-signing-key
 TAUTH_TENANT_SESSION_COOKIE_NAME_PINGUIN=app_session_pinguin
@@ -30,6 +31,7 @@ TAUTH_TENANT_REFRESH_COOKIE_NAME_PINGUIN=app_refresh_pinguin
 TAUTH_TENANT_ID_LOOPAWARE=loopaware
 TAUTH_TENANT_DISPLAY_NAME_LOOPAWARE=LoopAware
 TAUTH_TENANT_ORIGIN_LOOPAWARE=http://localhost:8080
+TAUTH_TENANT_ORIGIN_LOOPAWARE_ALT=http://127.0.0.1:8080
 TAUTH_TENANT_GOOGLE_WEB_CLIENT_ID_LOOPAWARE=replace-with-google-client-id.apps.googleusercontent.com
 TAUTH_TENANT_JWT_SIGNING_KEY_LOOPAWARE=replace-with-tauth-signing-key
 TAUTH_TENANT_SESSION_COOKIE_NAME_LOOPAWARE=app_session_loopaware
