--- a/configs/.env.loopaware.computercat.example
+++ b/configs/.env.loopaware.computercat.example
@@ -15,6 +15,10 @@ TAUTH_SESSION_COOKIE_NAME=app_session_loopaware
 
 PUBLIC_BASE_URL=https://computercat.tyemirov.net:4443
 
+# Optional: public origin for the backend API when hosting the frontend separately (GitHub Pages).
+# Defaults to the frontend origin when omitted.
+API_BASE_URL=https://computercat.tyemirov.net:4443
+
 # Pinguin gRPC integration
 PINGUIN_ADDR=la-pinguin:50051
 PINGUIN_AUTH_TOKEN=replace-with-shared-pinguin-token
