--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,13 @@
 PLAN.md
 issues.md/PLAN.md
 tools/
-tests/
+tests/20*/
+tests/artifacts/
+tests/playwright-report/
+tests/test-results/
+tests/node_modules/
+tests/.cache/
+tests/.npm/
 # Managed by gix gitignore workflow
 .env.*
 !configs/.env.*.example
