--- a/web/config.yml
+++ b/web/config.yml
@@ -1,25 +1,18 @@
-# LoopAware frontend runtime configuration.
-#
-# This file is named .yml but uses JSON syntax so the browser can parse it
-# without shipping a YAML parser. YAML 1.2 is a superset of JSON.
-{
-  "version": 1,
-  "environments": [
-    {
-      "name": "production",
-      "hostnames": ["loopaware.mprlab.com", "tyemirov.github.io"],
-      "services": {
-        "apiOrigin": "https://loopaware-api.mprlab.com",
-        "tauthOrigin": "https://tauth-api.mprlab.com"
-      }
-    },
-    {
-      "name": "development",
-      "hostnames": ["computercat.tyemirov.net", "localhost", "127.0.0.1"],
-      "services": {
-        "apiOrigin": "",
-        "tauthOrigin": ""
-      }
-    }
-  ]
-}
+# LoopAware frontend runtime configuration (loaded by `web/runtime-env.js`).
+version: 1
+environments:
+  - name: production
+    hostnames:
+      - loopaware.mprlab.com
+      - tyemirov.github.io
+    services:
+      apiOrigin: https://loopaware-api.mprlab.com
+      tauthOrigin: https://tauth-api.mprlab.com
+  - name: development
+    hostnames:
+      - computercat.tyemirov.net
+      - localhost
+      - 127.0.0.1
+    services:
+      apiOrigin: ""
+      tauthOrigin: ""
