refactor(api): move public ingestion routes under /public

--- a/configs/.env.ghttp.integration.example
+++ b/configs/.env.ghttp.integration.example
@@ -2,4 +2,4 @@
 GHTTP_SERVE_DIRECTORY=/data
 GHTTP_SERVE_PORT=8090
 GHTTP_SERVE_LOGGING_TYPE=JSON
-GHTTP_SERVE_PROXIES=/tauth.js=http://la-tauth:8082,/me=http://la-tauth:8082,/auth/=http://la-tauth:8082,/api/=http://loopaware-api:8080
+GHTTP_SERVE_PROXIES=/tauth.js=http://la-tauth:8082,/me=http://la-tauth:8082,/auth/=http://la-tauth:8082,/public/=http://loopaware-api:8080,/api/=http://loopaware-api:8080
