--- a/configs/.env.ghttp.example
+++ b/configs/.env.ghttp.example
@@ -4,4 +4,4 @@ GHTTP_SERVE_PORT=4443
 GHTTP_SERVE_LOGGING_TYPE=JSON
 GHTTP_SERVE_TLS_CERTIFICATE=/certs/computercat-cert.pem
 GHTTP_SERVE_TLS_PRIVATE_KEY=/certs/computercat-key.pem
-GHTTP_SERVE_PROXIES=/tauth.js=http://la-tauth:8082,/me=http://la-tauth:8082,/auth/=http://la-tauth:8082,/api/=http://loopaware-api:8080
+GHTTP_SERVE_PROXIES=/tauth.js=http://la-tauth:8082,/me=http://la-tauth:8082,/auth/=http://la-tauth:8082,/public/=http://loopaware-api:8080,/api/=http://loopaware-api:8080
