Fix LA-448 release tag validation for standard semver

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,8 +22,8 @@ jobs:
     steps:
       - name: Validate release tag format
         run: |
-          if [[ ! "${GITHUB_REF_NAME}" =~ ^v[0-9]{2}\.[0-9]{2}\.[0-9]{2}$ ]]; then
-            echo "Release tags must match vXX.XX.XX. Received: ${GITHUB_REF_NAME}"
+          if [[ ! "${GITHUB_REF_NAME}" =~ ^v(0|[1-9][0-9]*)\.(0|[1-9][0-9]*)\.(0|[1-9][0-9]*)$ ]]; then
+            echo "Release tags must match vMAJOR.MINOR.PATCH (for example: v0.1.0). Received: ${GITHUB_REF_NAME}"
             exit 1
           fi
 
